public class Libro {
    private String titulo;
    private String isbn;
    private String editorial;
    private String idioma;
    private int numPaginas;
    private int anyo;
    private boolean disponible;
    public void Libro(String titulo, String isbn, String editorial, String idioma, int numPaginas, int anyo, boolean disponible) {
        // TODO: Implementar el método
    }
    public String getTitulo() {
        // TODO: Implementar el método
    }
    public void setTitulo(String titulo) {
        // TODO: Implementar el método
    }
    public String getIsbn() {
        // TODO: Implementar el método
    }
    public void setIsbn(String isbn) {
        // TODO: Implementar el método
    }
    public String getEditorial() {
        // TODO: Implementar el método
    }
    public void setEditorial(String editorial) {
        // TODO: Implementar el método
    }
    public String getIdioma() {
        // TODO: Implementar el método
    }
    public void setIdioma(String idioma) {
        // TODO: Implementar el método
    }
    public int getNumeroPaginas() {
        // TODO: Implementar el método
    }
    public void setNumeroPaginas(int numPaginas) {
        // TODO: Implementar el método
    }
    public int getanyo() {
        // TODO: Implementar el método
    }
    public void setanyo(int anyo) {
        // TODO: Implementar el método
    }
    public void estaDisponible() {
        // TODO: Implementar el método
    }
    public void esExtranjero() {
        // TODO: Implementar el método
    }
    public void disponibleSysout() {
        // TODO: Implementar el método
    }
    public void informacion() {
        // TODO: Implementar el método
    }
}
