public class Sala {
    private String nombre;
    private int capacidad;
    private boolean pizarra;
    private String tipo;
    private boolean disponible;
    private List<PersonaPOO> personas;
    public void Sala(String nombre, int capacidad, boolean pizarra, String tipo, boolean disponible) {
        // TODO: Implementar el método
    }
    public String getNombre() {
        // TODO: Implementar el método
    }
    public void setNombre(String nombre) {
        // TODO: Implementar el método
    }
    public int getCapacidad() {
        // TODO: Implementar el método
    }
    public void setCapacidad(int capacidad) {
        // TODO: Implementar el método
    }
    public boolean getPizarra() {
        // TODO: Implementar el método
    }
    public void setPizarra(boolean pizarra) {
        // TODO: Implementar el método
    }
    public String getTipo() {
        // TODO: Implementar el método
    }
    public void setTipo(String tipo) {
        // TODO: Implementar el método
    }
    public boolean getDisponible() {
        // TODO: Implementar el método
    }
    public void setDisponible(boolean disponible) {
        // TODO: Implementar el método
    }
    public List<PersonaPOO> getPersonas() {
        // TODO: Implementar el método
    }
    public void estaDisponible(boolean disponible) {
        // TODO: Implementar el método
    }
    public void tienePizarra(boolean pizarra) {
        // TODO: Implementar el método
    }
    public void informacion() {
        // TODO: Implementar el método
    }
    public void entrarPersona(PersonaPOO p) {
        // TODO: Implementar el método
    }
    public void salirPersona(PersonaPOO p) {
        // TODO: Implementar el método
    }
    public void mostrarPersonas() {
        // TODO: Implementar el método
    }
}
