' Generated by UML Generator
' Encoded: hLVDRjim3BxxANHqKGVOEHYAPcs1PUZI0Ebj60RPLbDkjcH8Sh6ss4Fj6VPYa-G_KRBReTYbQKYH_4H-99LpfQdKRLqbwWVmXafQawAYIcsqbf2tccqBmG_mnCYxv1vAHWgGHSMIn9qY7o2lG6XMKFAS4BBYeiubMvE3iUP7Aob1ig80mNtXlP1qqp0JMT8r0Qu7uGKmQUrxKGMv56fDha7fzzVsovaLAsg2zzA3-Ty9jT2qsZEf1AVAIaSlA_FdT4AQOf0PYI2UM8CZqpjtC3tne9-gKOpTc4CF0ihUyd9m6HbFcZWiSl7Hov7rqbt6ka2QA9MnbowfiOzU7kJTisU67PlSg7GN9zG3lnEofiCz1p4jIrUhr9NFribyU7h9Ql70NZnYNDWIfihLqVuRsI_hQw6qfDBvL6ciiCVdv1v5F6NUgg9tjXVo5dHRYLIx3wzmJX_6k11y8EGIZ4jGZU0cC9ixSkjpUjJ_6hhF1UqQ3mEo4b0vwZbMWXOIQ8KEbI1gwajuM-_f4RXjiBv_A7yKuvTo1BmckH0LetpiiQwa64f6V20PYM2O0mX4HW886Ha1s5wDmW_TsfScRBYbYdbDiZK88pidzB5ZcwlX7f7Xf8dk6eHrzuu3TsAS5MovQsjcwDWb2JSsLWMfn5viMh6naupP3YR1HDKKQQv-6ghoxoQgBvyATNXKejNfAtDZ9FLd2jnn-lJP1DLG_2Ar4QLK7jMGZIzV8xE-I_OtDqkRY9Mqz6WyivPemweAIg5yuULkYxmOCAY5DAlOdU1JXpHIt34LklxpMvXCcK4DZ1SGBAS9VBISHjGdtbpOpW_U_xDuhan4J0idcO1WAhvjHveZco7RQPHt768w6Drfjqsz-WIfCChGO6FBy8rDTKXd2nCm_rERGqLBn-zXvet4isDyYN85RKoHVDury4IbtQJUxDJG2FnacXsnJRy7-eVFn9cpaKTk9uOCmY0o4aB8Y0_WnH7xzWVHnG02CsiIOvJOUDyXzjFVcG-Ay4hO_DPSRsOjD7OfD6Bf0USFEnpLqytb2aFtblTCsSB1-h8_RIZA_k7E2-yonktiw06apTgRcNvdqWfUFTJFeRcdYVUJGAnM_SCe45gU9gvnxBSfGdBEU6b-ZVm5
' URL: http://www.plantuml.com/plantuml/uml/hLVDRjim3BxxANHqKGVOEHYAPcs1PUZI0Ebj60RPLbDkjcH8Sh6ss4Fj6VPYa-G_KRBReTYbQKYH_4H-99LpfQdKRLqbwWVmXafQawAYIcsqbf2tccqBmG_mnCYxv1vAHWgGHSMIn9qY7o2lG6XMKFAS4BBYeiubMvE3iUP7Aob1ig80mNtXlP1qqp0JMT8r0Qu7uGKmQUrxKGMv56fDha7fzzVsovaLAsg2zzA3-Ty9jT2qsZEf1AVAIaSlA_FdT4AQOf0PYI2UM8CZqpjtC3tne9-gKOpTc4CF0ihUyd9m6HbFcZWiSl7Hov7rqbt6ka2QA9MnbowfiOzU7kJTisU67PlSg7GN9zG3lnEofiCz1p4jIrUhr9NFribyU7h9Ql70NZnYNDWIfihLqVuRsI_hQw6qfDBvL6ciiCVdv1v5F6NUgg9tjXVo5dHRYLIx3wzmJX_6k11y8EGIZ4jGZU0cC9ixSkjpUjJ_6hhF1UqQ3mEo4b0vwZbMWXOIQ8KEbI1gwajuM-_f4RXjiBv_A7yKuvTo1BmckH0LetpiiQwa64f6V20PYM2O0mX4HW886Ha1s5wDmW_TsfScRBYbYdbDiZK88pidzB5ZcwlX7f7Xf8dk6eHrzuu3TsAS5MovQsjcwDWb2JSsLWMfn5viMh6naupP3YR1HDKKQQv-6ghoxoQgBvyATNXKejNfAtDZ9FLd2jnn-lJP1DLG_2Ar4QLK7jMGZIzV8xE-I_OtDqkRY9Mqz6WyivPemweAIg5yuULkYxmOCAY5DAlOdU1JXpHIt34LklxpMvXCcK4DZ1SGBAS9VBISHjGdtbpOpW_U_xDuhan4J0idcO1WAhvjHveZco7RQPHt768w6Drfjqsz-WIfCChGO6FBy8rDTKXd2nCm_rERGqLBn-zXvet4isDyYN85RKoHVDury4IbtQJUxDJG2FnacXsnJRy7-eVFn9cpaKTk9uOCmY0o4aB8Y0_WnH7xzWVHnG02CsiIOvJOUDyXzjFVcG-Ay4hO_DPSRsOjD7OfD6Bf0USFEnpLqytb2aFtblTCsSB1-h8_RIZA_k7E2-yonktiw06apTgRcNvdqWfUFTJFeRcdYVUJGAnM_SCe45gU9gvnxBSfGdBEU6b-ZVm5
' Generated on: 2025-11-19T13:51:50.022752800

@startuml
skinparam classAttributeIconSize 0
hide circle

class Biblioteca {
  -nombre: String
  -direccion: String
  -horaApertura: int
  -horaCierre: int
  -libros: List<Libro>
  -salas: List<Sala>
  -totalPersonasSala: int
  --
  +Biblioteca(nombre: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +getHoraApertura(): int
  +setHoraApertura(horaApertura: int): void
  +getHoraCierre(): int
  +setHoraCierre(horaCierre: int): void
  +estaAbierta(hora: int): void
  +informacion(): void
  +addLibro(libro: Libro): void
  +removeLibro(libro: Libro): void
  +addSala(sala: Sala): void
  +removeSala(sala: Sala): void
  +mostrarLibros(): void
  +mostrarSalas(): void
  +mostrarBiblioteca(): void
  +buscarLibroPorTitulo(titulo: String): Libro
  +mostrarSalasConPersonas(): void
  +mostrarSalasDisponibles(): void
  +mostrarTotalPersonas(): void
}

class Libro {
  -titulo: String
  -isbn: String
  -editorial: String
  -idioma: String
  -numPaginas: int
  -anyo: int
  -disponible: boolean
  --
  +Libro(titulo: String, isbn: String, editorial: String, idioma: String, numPaginas: int, anyo: int, disponible: boolean)
  +getTitulo(): String
  +setTitulo(titulo: String): void
  +getIsbn(): String
  +setIsbn(isbn: String): void
  +getEditorial(): String
  +setEditorial(editorial: String): void
  +getIdioma(): String
  +setIdioma(idioma: String): void
  +getNumeroPaginas(): int
  +setNumeroPaginas(numPaginas: int): void
  +getanyo(): int
  +setanyo(anyo: int): void
  +estaDisponible(): void
  +esExtranjero(): void
  +disponibleSysout(): void
  +informacion(): void
}

class Main {
  +{static} main(args: String[]): void
}

class PersonaPOO {
  -nombre: String
  -edad: int
  -direccion: String
  -apellidos: String
  -DNI: String
  -email: String
  -telefono: int
  -profesion: String
  -añosExperiencia: int
  --
  +PersonaPOO(nombre: String, edad: int)
  +mostrarInformacion(): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +getEdad(): int
  +setEdad(edad: int): void
  +getNombre(): String
  +setNombre(nombre: String): void
  +setApellidos(apellidos: String): void
  +getApellidos(): String
  +setDNI(DNI: String): void
  +getDNI(): String
  +setAños_experiencia(añosExperiencia: int): void
  +estaJubilado(): boolean
}

class Sala {
  -nombre: String
  -capacidad: int
  -pizarra: boolean
  -tipo: String
  -disponible: boolean
  -personas: List<PersonaPOO>
  --
  +Sala(nombre: String, capacidad: int, pizarra: boolean, tipo: String, disponible: boolean)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCapacidad(): int
  +setCapacidad(capacidad: int): void
  +getPizarra(): boolean
  +setPizarra(pizarra: boolean): void
  +getTipo(): String
  +setTipo(tipo: String): void
  +getDisponible(): boolean
  +setDisponible(disponible: boolean): void
  +getPersonas(): List<PersonaPOO>
  +estaDisponible(disponible: boolean): void
  +tienePizarra(pizarra: boolean): void
  +informacion(): void
  +entrarPersona(p: PersonaPOO): void
  +salirPersona(p: PersonaPOO): void
  +mostrarPersonas(): void
}

Biblioteca o-- Libro
Biblioteca o-- Sala
Sala o-- PersonaPOO
@enduml